[gd_scene load_steps=6 format=3 uid="uid://cs82bn2o7aref"]

[ext_resource type="Script" uid="uid://dmicn3kmr620j" path="res://addons/asset_placer/utils/system_icon.gd" id="1_q0bvl"]
[ext_resource type="Script" uid="uid://bf5fmwafbhhb0" path="res://addons/asset_placer/ui/asset_collections_window/components/collection_list_item.gd" id="1_xjg5v"]
[ext_resource type="Texture2D" uid="uid://btht44hiygnmq" path="res://addons/asset_placer/ui/asset_collections_window/components/collection_circle.svg" id="2_pmrqs"]

[sub_resource type="Texture2D" id="Texture2D_xjg5v"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_q0bvl")
icon_name = &"Edit"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[sub_resource type="Texture2D" id="Texture2D_q0bvl"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("1_q0bvl")
icon_name = &"Remove"
metadata/_custom_type_script = "uid://dmicn3kmr620j"

[node name="HBoxContainer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 32.0
grow_horizontal = 2
script = ExtResource("1_xjg5v")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(25, 24)
layout_mode = 2
texture = ExtResource("2_pmrqs")
stretch_mode = 5

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Label"

[node name="EditButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Edit"
icon = SubResource("Texture2D_xjg5v")

[node name="DeleteButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Remove"
icon = SubResource("Texture2D_q0bvl")
